fix layout issue, wont scroll anymore

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,14 +4,16 @@
     box-sizing: border-box;
     height: 100dvh;
     width: 100dvw;
-    background-color: #383434;
     justify-content: center;
     align-items: center;
 }
 
 a {
-    transform: scale(1);
-    animation: pulse 2.5s infinite;
+    img {
+        width: min(70vw, 500px);
+        transform: scale(1);
+        animation: pulse 2.5s infinite;
+    }
 }
 
 @keyframes pulse {
