--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    background-color: #383434;
+}
+
 body {
     margin: 0;
 }
